@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.fazecast:jSerialComm:2.10.4'
+    implementation 'com.fazecast:jSerialComm:2.11.4'
 }
 
 application {
@@ -22,6 +22,7 @@ application {
 
 run {
     standardInput = System.in
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
 
 jar {
